--- a/app/src/main/res/layout/fragment_dispensaciones_list.xml
+++ b/app/src/main/res/layout/fragment_dispensaciones_list.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.list.dispensacionesListFragment">
+    tools:context=".ui.list.DispensacionesListFragment">
 
     <CalendarView
         android:id="@+id/calendarView"
@@ -18,5 +17,6 @@
         android:id="@+id/dispRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="50dp"
         tools:listitem="@layout/card_view_dispensaciones" />
 </LinearLayout>
