pasando IDequipo mediente interfaz comunicadr

--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -202,7 +202,7 @@
             android:layout_height="200dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="8dp"
-            android:layout_marginBottom="32dp" />
+            android:layout_marginBottom="8dp" />
 
 
 
@@ -211,6 +211,14 @@
             android:name="com.willvargas.telemetria_esp8266.ui.list.DispensacionesListFragment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+
+        <Button
+            android:id="@+id/buttonListaDispensaciones"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Button"
+            android:layout_marginBottom="30dp"
+            />
 
     </LinearLayout>
 </ScrollView>
