mostrando fragment dispensacionesLista en una vista aparte

--- a/app/src/main/res/layout/fragment_dispensaciones_list.xml
+++ b/app/src/main/res/layout/fragment_dispensaciones_list.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/frameLayout"
+    android:id="@+id/frameLayoutDispensaciones"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -25,5 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="50dp"
-        tools:listitem="@layout/card_view_dispensaciones" />
+        tools:listitem="@layout/card_view_dispensaciones"
+        />
+
 </LinearLayout>
