--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -205,20 +205,12 @@
             android:layout_marginBottom="8dp" />
 
 
-
-        <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/fragmentContainerListDisp"
-            android:name="com.willvargas.telemetria_esp8266.ui.list.DispensacionesListFragment"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
         <Button
             android:id="@+id/buttonListaDispensaciones"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Button"
             android:layout_marginBottom="30dp"
-            />
+            android:text="@string/mostar_lista_dispensaciones" />
 
     </LinearLayout>
 </ScrollView>
