--- a/app/src/main/res/navigation/mobile_navigation_lateral.xml
+++ b/app/src/main/res/navigation/mobile_navigation_lateral.xml
@@ -39,25 +39,24 @@
             android:name="equipo"
             app:argType="com.willvargas.telemetria_esp8266.data.server.EquiposServer" />
         <action
-            android:id="@+id/action_detailFragment_to_mostrarListaFragment"
-            app:destination="@id/mostrarListaFragment" />
-        <action
             android:id="@+id/action_detailFragment_to_dispensacionesListFragment"
             app:destination="@id/dispensacionesListFragment" />
     </fragment>
-    <fragment
-        android:id="@+id/mostrarListaFragment"
-        android:name="com.willvargas.telemetria_esp8266.ui.list.MostrarListaFragment"
-        android:label="fragment_mostrar_lista"
-        tools:layout="@layout/fragment_mostrar_lista" />
     <fragment
         android:id="@+id/dispensacionesListFragment"
         android:name="com.willvargas.telemetria_esp8266.ui.list.DispensacionesListFragment"
         android:label="fragment_dispensaciones_list"
         tools:layout="@layout/fragment_dispensaciones_list" >
         <argument
-            android:name="equipoX"
-            app:argType="com.willvargas.telemetria_esp8266.data.server.EquiposServer" />
+            android:name="idEquipo"
+            app:argType="string"
+            android:defaultValue="xxx"
+            />
+        <argument
+            android:name="equipo"
+            app:argType="com.willvargas.telemetria_esp8266.data.server.EquiposServer"
+            app:nullable="true"
+            android:defaultValue="@null" />
     </fragment>
 
 
