eliminando algunos items

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -101,6 +101,7 @@
         android:layout_marginStart="10dp"
         android:text="@string/recordar"
         android:textColorLink="@color/Verde_700"
+        android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/layoutPassword" />
 
